# thai-food-classifier

./: .dockerignore  .gitignore  KNOWN_ISSUES.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci-api.yml  ci-shared.yml  ci-web.yml
apps/api/: .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  index.py  predict.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
apps/api/.github/workflows/: ci.yml  deploy.yml
apps/api/src/: __init__.py
apps/api/src/api/: routes.py
apps/api/src/config/: food_names.py  settings.py
apps/api/src/services/: database_service.py  image_service.py  prediction_service.py
apps/api/src/utils/: logger.py
apps/api/tests/: __init__.py  conftest.py  test_api.py  test_predict.py
apps/web/: .env.example  README.md  next.config.js  package.json  tailwind.config.js
apps/web/components/: Navbar.jsx  PredictImage.jsx  PredictResult.jsx
apps/web/lib/: api.js  constants.js  utils.js
apps/web/pages/: _app.js  about.js  index.js  predict.js
apps/web/pages/result/: [resultId].js
apps/web/styles/: globals.less
infra/: api.Dockerfile  docker-compose.yml  web.Dockerfile
