[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thai-food-image-classification-api"
version = "1.0.0"
description = "REST API for Thai food image classification using deep learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thai Food API Contributors"}
]
dependencies = [
    "Flask==2.0.0",
    "Flask-Cors==3.0.10",
    "keras==2.11.0",
    "keras-nightly==2.5.0.dev2021032900",
    "Keras-Preprocessing==1.1.2",
    "numpy==1.23.5",
    "pymongo==4.3.3",
    "python-dotenv==0.21.0",
    "requests==2.26.0",
    "tensorflow==2.11.0",
    "pillow==9.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-flask==1.3.0",
    "black==23.12.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
]

[tool.setuptools]
packages = ["src", "src.api", "src.services", "src.config", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | ENV
  | build
  | dist
  | __pycache__
  | \.eggs
  | \.pytest_cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=. --cov-report=term-missing"
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
